# v_real_state-sales

./: .env.local  .gitignore  BACKEND_ARCHITECTURE.md  DISABLE_EMAIL_CONFIRMATION.md  ELEVENLABS_WIDGET_ERROR.md  FIX_SIGNUP_ERROR.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  QUICK_START.md  README.md  SETUP.md  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
backend/: app.py  langgraph.json  pyproject.toml  requirements.txt  test_mcp.py  test_periskope_mcp.py  test_whatsapp_send.py
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/src/: langgraph_test.py
backend/src/agent/: graphbuilder.py  logging_config.py  logging_utils.py  nodes.py  prompts.py  state.py  tools.py  utils.py
backend/src/mcp/: __init__.py  mcp.json  supabase.py
backend/src/utils/: __init__.py
backend/src/utils/logging/: __init__.py  logging_config.py  logging_utils.py
components/: analytics-content.tsx  app-shell-wrapper.tsx  app-shell.tsx  appointments-content.tsx  campaign-run-view.tsx  campaigns-content.tsx  compliance-content.tsx  conversations-content.tsx  dashboard-content.tsx  handoffs-content.tsx  integrations-content.tsx  live-call-content.tsx  page-loader.tsx  properties-content.tsx  qa-review-content.tsx  settings-content.tsx  system-health-content.tsx  users-content.tsx  voice-agent-selector.tsx
lib/: mock-data.ts  role-permissions.ts  types.ts
(+42 files in other folders)
