[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.4",
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "mcp>=1.25.0",
    "supabase>=2.27.0",
    "uvicorn>=0.40.0",
]
